ruby.h: adjust for g++

* include/ruby/ruby.h (RClass): move `__attribute__` after the
  keyword `struct` for g++.  [ruby-core:70297] [Bug #11426]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@51621 b2dd03c8-39d4-4d8f-98ff-823fe69b080e